--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
@@ -22,6 +23,9 @@
     "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
     "typescript": "^4.3.2",
-    "vite": "^2.4.3"
+    "vite": "^2.4.3",
+    "jsdom": "^16.6.0",
+    "node-fetch": "^2.6.1",
+    "node-html-parser": "^4.1.0"
   }
 }
