--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^17.0.0",
@@ -12,6 +13,7 @@
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
+    "@types/node": "^16.4.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
@@ -21,11 +23,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.2",
-    "vite": "^2.4.3",
     "jsdom": "^16.6.0",
     "node-fetch": "^2.6.1",
-    "node-html-parser": "^4.1.0"
-  }
+    "node-html-parser": "^4.1.0",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.2",
+    "vite": "^2.4.3"
+  },
+  "type": "module"
 }
